--- a/_config.yml
+++ b/_config.yml
@@ -2,31 +2,31 @@
 page_title                                :                                           # Automatically populates with app name if not set and if iOS app ID is set. Otherwise enter manually.
 
 # App Info
-ios_app_id                                : 1234793120                                # Required. Enter iOS app ID to automatically populate name, price and icons (e.g. 718043190).
+ios_app_id                                : 1497444879                                # Required. Enter iOS app ID to automatically populate name, price and icons (e.g. 718043190).
 
 appstore_link                             :                                           # Automatically populates if not set and if iOS app ID is set. Otherwise enter manually.
 playstore_link                            :                                           # Enter Google Play Store URL.
-presskit_download_link                    : https://emilbaehr.com                                          # Enter a link to downloadable file or (e.g. public Dropbox link to a .zip file). 
+presskit_download_link                    :                                           # Enter a link to downloadable file or (e.g. public Dropbox link to a .zip file). 
                                                                                       # Or upload your press kit file to assets and set path accordingly (e.g. "assets/your_press_kit.zip").
 
 app_icon                                  : # assets/appicon.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
 app_name                                  :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price                                 :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_description                           : Write a short tagline for your app.
+app_description                           : Stress free budgets
 
 enable_smart_app_banner                   : true                                      # Set to true to show a smart app banner at top of page on mobile devices.
 
 
 
 # Information About Yourself
-your_name                                 : Emil Baehr                                
-your_link                                 : https://emilbaehr.com                     
-your_city                                 : Copenhagen                                
-email_address                             : emil.baehr@gmail.com
+your_name                                 : Julian Ramirez                               
+your_link                                 : https://surplusfinance.com                     
+your_city                                 : San Francisco                                
+email_address                             : hello@surplusfinance.com
 facebook_username                         :                                           
-instagram_username                        : ebaehr
-twitter_username                          : ebaehr
-github_username                           : emilbaehr
+instagram_username                        : 
+twitter_username                          : julianramirez
+github_username                           : 
 youtube_username                          :
 
 
@@ -34,41 +34,41 @@ youtube_username                          :
 # Feature List                            Edit, add or remove features to be presented.
 features                                  :
 
-  - title                                 : GitHub Pages Jekyll Theme
-    description                           : Designed for GitHub Pages. Fork. Edit _config.yml. Upload screenshot/video. Push to gh-pages branch. Voilá!
+  - title                                 : Simple Advice
+    description                           : Surplus keeps it simple, we give you 1 number to think about. How much you spend today.
+    fontawesome_icon_name                 : wallet
+
+  - title                                 : Simple Setup
+    description                           : Just let us know your income, any monthly bills, and how much you want to save. We'll take care of the rest.
+    fontawesome_icon_name                 : money-check-alt
+
+  - title                                 : Made For The Real World
+    description                           : Splitting a meal with friends? Need to ignore that work expense? We gotcha and will do the right thing.
     fontawesome_icon_name                 : magic
-    
-  - title                                 : iPhone Device Preview
-    description                           : Preview your app in the context of an iPhone device. Five different device colors included.
-    fontawesome_icon_name                 : mobile
 
-  - title                                 : Video Support
-    description                           : Preview app video on the iPhone device simply by placing your video files in the videos folder.
-    fontawesome_icon_name                 : play-circle
-
-  - title                                 : Automatic Icon and Metadata
-    description                           : Enter iOS app ID in the _config.yml file to automatically fetch app icon, price and App Store Link.
-    fontawesome_icon_name                 : sync
-
-  - title                                 : Easy to Tweak
-    description                           : Tweak accent color, images, icons and transparency via the _config.yml file. No HTML/CSS needed.
-    fontawesome_icon_name                 : adjust
+  - title                                 : Easily Share Expenses
+    description                           : Easily keep track of shared expenses and get accurate spending advice.
+    fontawesome_icon_name                 : users
   
-  - title                                 : Feature List
-    description                           : Add features (like this one) to your site via the _config.yml file. No HTML/CSS needed.
-    fontawesome_icon_name                 : star
+  - title                                 : Automatic Updates
+    description                           : Subscribe to Surplus Premium to automate your spending advice, no more manual input!
+    fontawesome_icon_name                 : sync
+    
+  - title                                 : Helpful Notifications
+    description                           : Subscribe to Surplus Premium to get notified as your daily spendable changes throughout the day.
+    fontawesome_icon_name                 : mobile-alt
 
-  - title                                 : Smart App Banner
-    description                           : Display a smart app banner on iOS devices.
-    fontawesome_icon_name                 : arrow-alt-circle-down
+  - title                                 : Simple Trends
+    description                           : See how your spending is trending with monthly trends.
+    fontawesome_icon_name                 : poll
 
-  - title                                 : Social Links
-    description                           : Easily add social media accounts and contact info in the footer via the _config.yml file. No HTML/CSS needed.
-    fontawesome_icon_name                 : link
+  - title                                 : Dive Deep with Merchant Details
+    description                           : Quickly view how much you spend on average with a merchant better understand your spending habits.
+    fontawesome_icon_name                 : store-alt
 
-  - title                                 : FontAwesome Support
-    description                           : Pick custom Font Awesome icons for the feature list via the _config.yml file. No HTML/CSS needed.
-    fontawesome_icon_name                 : info-circle
+  - title                                 : Easy and Powerful Search (Coming Soon!)
+    description                           : Find the transaction your looking for with our simple and powerful search.
+    fontawesome_icon_name                 : search-dollar
 
   - title                                 : # New Feature Title
     description                           : # New Feature Description
