--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ youtube_username                          :
 features                                  :
 
   - title                                 : Simple Advice
-    description                           : Surplus keeps it simple, we give you 1 number to think about. How much you spend today.
+    description                           : Surplus keeps it simple, we give you one number to think about. How much you can spend today.
     fontawesome_icon_name                 : wallet
 
   - title                                 : Simple Setup
